extend to compute clusters and compute nodes